create unit search capability
