# infra/gateway/oas-integrations.yml
@@ -73,6 +73,88 @@ paths:
           application/json: "{\"statusCode\": 200}"
         passthroughBehavior: when_no_match
         type: mock
+
+  /unit/search:
+    get:
+      parameters:
+      - name: expireBy
+        in: query
+        schema:
+          type: string
+          format: date
+      - name: mass
+        in: query
+        schema:
+          type: number
+          format: float
+      - name: name
+        in: query
+        schema:
+          type: string
+      - name: desc
+        in: query
+        schema:
+          type: string
+      responses:
+        200:
+          description: successful units query
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/unit"
+      security:
+      - auth: []
+      x-amazon-apigateway-integration:
+        uri: arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:979746346488:function:get-unit-search/invocations
+        responses:
+          default:
+            statusCode: 200
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        contentHandling: CONVERT_TO_TEXT
+        type: aws_proxy
+    options:
+      responses:
+        200:
+          description: 200 response
+          headers:
+            X-Requested-With:
+              schema:
+                type: string
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+          content: {}
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Credentials: "'true'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.X-Requested-With: "'*'"
+              method.response.header.Access-Control-Allow-Headers: "'apikey,Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: when_no_match
+        type: mock
+
 components:
   schemas:
     unit:
